--- a/src/App.css
+++ b/src/App.css
@@ -106,4 +106,14 @@ button {
       transform: translate3d(0, 0, 0) translateZ(0);
     }
   }  
+
+  @media only screen and (max-width: 600px) {
+    .card {
+        width: 80%;
+        height: 30%;
+    }
+    button{
+        margin-bottom: 8%;
+    }
+  }
   
